--- a/carrot.html
+++ b/carrot.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>정동수 차장 디지털 명함</title>
+    <title>평택 진위 쌍용 스마트 어반</title>
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
