--- a/carrot.html
+++ b/carrot.html
@@ -83,7 +83,7 @@
                 <div class="bg-gray-50 p-4 rounded-xl mb-6 shadow-inner mx-6">
                     <h3 class="text-lg font-bold text-gray-800 mb-2 text-center">👉평택 진위 쌍용 스마트어반 <br>민간임대 마감 임박</h3>
                     <p class="text-gray-700 text-sm mb-2 text-left">
-                        1,228세대 청약 없는 전세형 민간 임대 아파트! 가곡2지구 도시개발구역 지정 계획도시!
+                        1,228세대 청약 없는 전세형 민간 임대 아파트! 가곡2지구 도시개발구역 확정도시!
                     </p>
                     <p class="text-gray-700 text-sm mb-2 text-left">
                         평당 900만 원대, 중도금 무이자, 10년간 세금 부담 없이 가능한 조건을 확인해 보세요.
