--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             각 페이지에서 당신의 퍼스널 브랜딩 스토리를 만나보실 수 있습니다.
         </p>
         <nav class="grid grid-cols-1 md:grid-cols-2 gap-4">
-            <a href="aedang.html" class="block bg-orange-500 hover:bg-orange-600 text-white font-semibold py-4 px-6 rounded-xl shadow-md transition duration-300 transform hover:scale-105">
+            <a href="https://JUNGDONGSU.github.io/PRUGIO/Lee_carrot.html" class="block bg-orange-500 hover:bg-orange-600 text-white font-semibold py-4 px-6 rounded-xl shadow-md transition duration-300 transform hover:scale-105">
                 애당 (愛當)
                 <p class="text-sm mt-1 opacity-90">사랑으로 가득 찬 당신의 이야기</p>
             </a>
