--- a/Lee_carrot.html
+++ b/Lee_carrot.html
@@ -125,7 +125,7 @@
                     <!-- Lee_Gift_Voucher.webp로 이미지 교체 -->
                     <img src="https://raw.githubusercontent.com/JUNGDONGSU/PRUGIO/refs/heads/main/image/Lee_Gift_Voucher.webp" alt="사은품 교환권 이미지" class="additional-image mt-4 shadow-md mb-4">
                     <!-- "계약시 황금열쇠 증정" 문구 추가 -->
-                    <p class="text-lg font-bold text-orange-600 mb-2">계약시 황금열쇠 증정</p>
+                    <p class="text-lg font-bold text-orange-600 mb-2">🎁계약시 황금열쇠 증정</p>
                     <img src="https://raw.githubusercontent.com/JUNGDONGSU/PRUGIO/refs/heads/main/image/golden_key.webp" alt="황금열쇠 최적화 이미지" class="additional-image shadow-md">
                 </div>
 
