--- a/carrot.html
+++ b/carrot.html
@@ -124,7 +124,7 @@
                 <div class="pb-6 pt-0 flex flex-col items-center gap-4 px-0">
                     <img src="https://raw.githubusercontent.com/JUNGDONGSU/smate-urban/refs/heads/main/image/Gift%20Voucher_optimized.webp" alt="기프트 바우처 최적화 이미지" class="additional-image mt-4 shadow-md mb-4">
                     <!-- "계약시 황금열쇠 증정" 문구 추가 -->
-                    <p class="text-lg font-bold text-orange-600 mb-2">계약시 황금열쇠 증정</p>
+                    <p class="text-lg font-bold text-orange-600 mb-2">🎁계약시 황금열쇠 증정</p>
                     <img src="https://raw.githubusercontent.com/JUNGDONGSU/PRUGIO/refs/heads/main/image/golden_key.webp" alt="황금열쇠 최적화 이미지" class="additional-image shadow-md">
                 </div>
 
