--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 정당 (正當)
                 <p class="text-sm mt-1 opacity-90">정직함으로 빛나는 당신의 가치</p>
             </a>
-            <a href="https://github.com/JUNGDONGSU/PRUGIO/Gold-_Rich.html" class="block bg-purple-500 hover:bg-purple-600 text-white font-semibold py-4 px-6 rounded-xl shadow-md transition duration-300 transform hover:scale-105">
+            <a href="https://JUNGDONGSU.github.io/PRUGIO/Gold-_Rich.html" class="block bg-purple-500 hover:bg-purple-600 text-white font-semibold py-4 px-6 rounded-xl shadow-md transition duration-300 transform hover:scale-105">
                 금당 (金當)
                 <p class="text-sm mt-1 opacity-90">황금처럼 빛나는 당신의 미래</p>
             </a>
