--- a/Lee_carrot.html
+++ b/Lee_carrot.html
@@ -129,7 +129,8 @@
                             <svg class="w-5 h-5 mr-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M18 10c0 3.866-3.582 7-8 7a8.841 8.941 0 01-4.758-1.12L3 17l1.62-2.16a8.941 8.941 0 01-1.12-4.758c0-4.418 3.582-8 8-8s8 3.582 8 8z" clip-rule="evenodd"></path></svg>
                             문자 보내기
                         </a>
-                        <a href="https://xn--vk1bl3rxogh2b96d75ueibs8g.shop/" target="_blank" class="btn-full-width flex items-center justify-center px-6 py-3 bg-green-600 text-white rounded-xl shadow-lg hover:bg-green-700 transition duration-300 ease-in-out transform hover:scale-105 hidden">
+                        <!-- 홈페이지 방문 버튼: hidden 클래스 제거 및 링크 업데이트 -->
+                        <a href="https://premium-real-estate.qshop.ai/" target="_blank" class="btn-full-width flex items-center justify-center px-6 py-3 bg-green-600 text-white rounded-xl shadow-lg hover:bg-green-700 transition duration-300 ease-in-out transform hover:scale-105">
                             <svg class="w-5 h-5 mr-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M10 12a2 2 0 100-4 2 2 0 000 4z"></path><path fill-rule="evenodd" d="M.458 10C1.732 5.943 5.522 3 10 3s8.268 2.943 9.542 7c-1.274 4.057-5.064 7-9.542 7S1.732 14.057.458 10zM14 10a4 4 0 11-8 0 4 4 0 018 0z" clip-rule="evenodd"></path></svg>
                             홈페이지 방문
                         </a>
