--- a/Gold-_Rich.html
+++ b/Gold-_Rich.html
@@ -119,10 +119,10 @@
                     아주대학병원 코앞!<br> GTX 옆자리 한신더휴
                 </h2>
                 <p class="story-text text-sm">
-                    "저는 6.27 부동산 규제 발표 이후, 많은 분들이 혼란스러워하는 모습을 보며 안타까움을 느꼈습니다.
-                    하지만 저는 이 시기가 오히려 새로운 기회를 잡을 수 있는 '골든 타임'이라고 확신했습니다.
+                    "6.27 부동산 규제 발표 이후, 많은 분들이 혼란스러워하는 모습을 보며 안타까움을 느꼈습니다.
+                    하지만 이 시기가 오히려 새로운 기회를 잡을 수 있는 '골든 타임'이라고 확신했습니다.
                     서울의 규제를 현명하게 피하고, 미래 가치를 선점할 수 있는 곳, 바로 평택 브레인시티 '한신더휴'에서 그 해답을 찾았습니다.
-                    저의 깊은 분석과 확신을 바탕으로, 여러분께 이 특별한 기회를 소개하고자 합니다."
+                    깊은 분석과 확신을 바탕으로, 여러분께 이 특별한 기회를 소개하고자 합니다."
                 </p>
                 <!-- 애니메이션 수정: sparkle-animation 대신 subtle-fade-animation 적용 -->
                 <p class="text-lg text-center font-semibold text-red-600 mt-6 mb-4 subtle-fade-animation">
